src/test/ui/impl-trait/issues/issue-78721.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-78721.rs:3:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error: `async` blocks are not allowed in constants
  --> $DIR/issue-78721.rs:8:57
   |
LL |         let f: impl core::future::Future<Output = u8> = async { 1 };
   |                                                         ^^^^^^^^^^^

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-78721.rs:8:13
   |
LL |         let f: impl core::future::Future<Output = u8> = async { 1 };
   |             ^ constants cannot evaluate destructors
...
LL |     }],
   |     - value is dropped here

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0493`.
